--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "my-app",
+  "homepage": "https://github.com/vighanesh2/TurnitUP_SBUHacks",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
