--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "homepage": "https://github.com/vighanesh2/TurnitUP_SBUHacks",
+  "homepage": "https://vighanesh2.github.io/TurnitUP_SBUHacks",
 
   "version": "0.1.0",
   "private": true,
